# trendkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PRD.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CONTRIBUTING.md  PRD.md  ROADMAP.md  TODO.md
src/google_trends_api/: __init__.py
src/google_trends_api/backends/: __init__.py  pytrends_backend.py
src/trendkit/: __init__.py  cache.py  cli.py  core.py  exceptions.py  mcp_server.py  types.py
src/trendkit/backends/: playwright_backend.py  pytrends_backend.py  rss.py  selenium_backend.py
tests/: test_api.py  test_backends.py  test_cache.py  test_cli.py  test_core_unit.py  test_e2e_scenarios.py  test_exceptions.py  test_mcp_server.py  test_playwright_backend.py  test_validation.py
