[project]
name = "trendkit"
version = "0.1.0"
description = "Multi-platform trend aggregator optimized for LLM tool calls (Google, Naver, YouTube)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "trendspyg>=0.1.0",
    "pytrends>=4.9.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
selenium = [
    "selenium>=4.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
all = [
    "trendkit[selenium,mcp,cli]",
]

[project.scripts]
trendkit = "trendkit.cli:main"
trendkit-mcp = "trendkit.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trendkit"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
