[project]
name = "trendkit"
version = "0.1.0"
description = "Google Trends aggregator optimized for LLM tool calls"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "trendkit contributors" }
]
keywords = [
    "google-trends",
    "trends",
    "mcp",
    "llm",
    "claude",
    "api",
    "scraping",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "trendspyg>=0.1.0",
    "pytrends>=4.9.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
selenium = [
    "selenium>=4.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
cli = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]
all = [
    "trendkit[selenium,mcp,cli]",
]

[project.urls]
Homepage = "https://github.com/trendkit/trendkit"
Repository = "https://github.com/trendkit/trendkit"
Documentation = "https://github.com/trendkit/trendkit#readme"
Issues = "https://github.com/trendkit/trendkit/issues"

[project.scripts]
trendkit = "trendkit.cli:main"
trendkit-mcp = "trendkit.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trendkit"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
